@@ -38,39 +38,39 @@ class MainWindow : public QMainWindow
 {
     Q_OBJECT
 
-    public:
-        MainWindow(QWidget *parent = 0);
-        ~MainWindow();
-        int parallelThreads();
-        bool pingTestEnabled();
-        bool downloadTestEnabled();
-        void showStatusBarMessage(QString);
+public:
+    MainWindow(QWidget *parent = 0);
+    ~MainWindow();
+    int parallelThreads();
+    bool pingTestEnabled();
+    bool downloadTestEnabled();
+    void showStatusBarMessage(QString);
 
-    protected:
-        void changeEvent(QEvent *e);
+protected:
+    void changeEvent(QEvent *e);
 
-    private:
-        Ui::MainWindow *ui;
-        void centerOnDesktop();
+private:
+    Ui::MainWindow *ui;
+    void centerOnDesktop();
 
-    signals:
-        void pushButtonStartClicked();
-        void pushButtonStopClicked();
-        void pushButtonHtmlCodeClicked(bool);
-        void pushButtonVbCodeClicked(bool);
+signals:
+    void pushButtonStartClicked();
+    void pushButtonStopClicked();
+    void pushButtonHtmlCodeClicked(bool);
+    void pushButtonVbCodeClicked(bool);
 
-    private slots:
-        void on_comboBoxTestMode_currentIndexChanged(int index);
-        void on_spinBoxPingsPerTarget_valueChanged(int value) { PINGSPERTARGET = value; }
-        void enablePushButtonStartStop();
-        void updateLogMessages(QString);
-        void updateTestResults(QString);
-        void benchmarkFinished(bool benchmarkCompleted);
-        void on_pushButtonStartStop_clicked();
-        void on_pushButtonAbout_clicked();
-        void on_pushButtonExit_clicked() { close(); }
-        void on_pushButtonHtmlCode_clicked() { emit pushButtonHtmlCodeClicked(true); }
-        void on_pushButtonVbCode_clicked() { emit pushButtonVbCodeClicked(false); }
+private slots:
+    void on_comboBoxTestMode_currentIndexChanged(int index);
+    void on_spinBoxPingsPerTarget_valueChanged(int value) { PINGSPERTARGET = value; }
+    void enablePushButtonStartStop();
+    void updateLogMessages(QString);
+    void updateTestResults(QString);
+    void benchmarkFinished(bool benchmarkCompleted);
+    void on_pushButtonStartStop_clicked();
+    void on_pushButtonAbout_clicked();
+    void on_pushButtonExit_clicked() { close(); }
+    void on_pushButtonHtmlCode_clicked() { emit pushButtonHtmlCodeClicked(true); }
+    void on_pushButtonVbCode_clicked() { emit pushButtonVbCodeClicked(false); }
 };
 
 
