@@ -1,5 +1,5 @@
 [TargetListInfo]
-Version=201006201710
+Version=201006301545
 NumberOfPingGroups=3
 Comment="by Someonefromhell, v0.43"
 ContactURL=http://www.adslgr.com/forum/member.php?u=1666
@@ -245,7 +245,7 @@ NumberOfTargets=5
 [FileHostsInternational]
 NumberOfTargets=5
 1\Name=Germany 1
-1\URL=http://ubuntu.mirror.tudos.de/ubuntu-releases/10.04/ubuntu-10.04-alternate-amd64.iso
+1\URL=http://ftp.halifax.rwth-aachen.de/ubuntu-releases/10.04/ubuntu-10.04-alternate-amd64.iso
 2\Name=Germany 2
 2\URL=http://ftp-stud.hs-esslingen.de/pub/Mirrors/releases.ubuntu.com/10.04/ubuntu-10.04-alternate-i386.iso
 3\Name=France
